--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="one">
       <div class="logoo">
     <a href="#" class="logo">
-      <img src="images/5555.png" alt="Logo"/>
+     Fahmy
   </a>
 </div>
   <nav>
